# ETL-pandas-pandera

./: README.md  etl.py  pipeline.py  pyproject.toml
